; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/char/extr_isicom.c_WaitTillCardIsFree.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/char/extr_isicom.c_WaitTillCardIsFree.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64)* @WaitTillCardIsFree to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @WaitTillCardIsFree(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i64 %0, i64* %2, align 8
  store i32 0, i32* %3, align 4
  %5 = call i32 (...) @in_atomic()
  store i32 %5, i32* %4, align 4
  br label %6

6:                                                ; preds = %25, %1
  %7 = load i64, i64* %2, align 8
  %8 = add i64 %7, 14
  %9 = call i32 @inw(i64 %8)
  %10 = and i32 %9, 1
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %16, label %12

12:                                               ; preds = %6
  %13 = load i32, i32* %3, align 4
  %14 = add i32 %13, 1
  store i32 %14, i32* %3, align 4
  %15 = icmp ult i32 %13, 100
  br label %16

16:                                               ; preds = %12, %6
  %17 = phi i1 [ false, %6 ], [ %15, %12 ]
  br i1 %17, label %18, label %26

18:                                               ; preds = %16
  %19 = load i32, i32* %4, align 4
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %21, label %23

21:                                               ; preds = %18
  %22 = call i32 @mdelay(i32 1)
  br label %25

23:                                               ; preds = %18
  %24 = call i32 @msleep(i32 1)
  br label %25

25:                                               ; preds = %23, %21
  br label %6

26:                                               ; preds = %16
  %27 = load i64, i64* %2, align 8
  %28 = add i64 %27, 14
  %29 = call i32 @inw(i64 %28)
  %30 = and i32 %29, 1
  %31 = icmp ne i32 %30, 0
  %32 = xor i1 %31, true
  %33 = zext i1 %32 to i32
  ret i32 %33
}

declare dso_local i32 @in_atomic(...) #1

declare dso_local i32 @inw(i64) #1

declare dso_local i32 @mdelay(i32) #1

declare dso_local i32 @msleep(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
